-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.5.0-rc1
-
macOS 10.12
open & configure cmake project with a single kit
go to Projects mode and disable the single enabled kit
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libProjectExplorer_debug.dylib 0x000000011451d25c QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::operator->() const + 12 (qscopedpointer.h:118) 1 libProjectExplorer_debug.dylib 0x000000011451d239 QObject::parent() const + 25 (qobject.h:413) 2 libProjectExplorer_debug.dylib 0x00000001146daaf5 ProjectExplorer::BuildConfiguration::target() const + 21 (buildconfiguration.cpp:228) 3 libCMakeProjectManager_debug.dylib 0x00000001191d9a15 CMakeProjectManager::Internal::BuildDirParameters::BuildDirParameters(CMakeProjectManager::Internal::CMakeBuildConfiguration*) + 453 (builddirparameters.cpp:47) 4 libCMakeProjectManager_debug.dylib 0x00000001191da18d CMakeProjectManager::Internal::BuildDirParameters::BuildDirParameters(CMakeProjectManager::Internal::CMakeBuildConfiguration*) + 29 (builddirparameters.cpp:75) 5 libCMakeProjectManager_debug.dylib 0x00000001191feab1 CMakeProjectManager::CMakeProject::CMakeProject(Utils::FileName const&)::$_9::operator()() const + 81 (cmakeproject.cpp:146) 6 libCMakeProjectManager_debug.dylib 0x00000001191fea49 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, CMakeProjectManager::CMakeProject::CMakeProject(Utils::FileName const&)::$_9>::call(CMakeProjectManager::CMakeProject::CMakeProject(Utils::FileName const&)::$_9&, void**) + 25 (qobjectdefs_impl.h:130) 7 libCMakeProjectManager_debug.dylib 0x00000001191fea01 _ZN9QtPrivate7FunctorIZN19CMakeProjectManager12CMakeProjectC1ERKN5Utils8FileNameEE3$_9Li0EE4callINS_4ListIJEEEvEEvRS7_PvPSD_ + 33 (qobjectdefs_impl.h:241) 8 libCMakeProjectManager_debug.dylib 0x00000001191fe9ad QtPrivate::QFunctorSlotObject<CMakeProjectManager::CMakeProject::CMakeProject(Utils::FileName const&)::$_9, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 157 (qobject_impl.h:169) 9 org.qt-project.QtCore 0x000000010d2f49fb QMetaObject::activate(QObject*, int, int, void**) + 731 10 libProjectExplorer_debug.dylib 0x00000001148f447d ProjectExplorer::Project::activeTargetChanged(ProjectExplorer::Target*) + 77 11 libProjectExplorer_debug.dylib 0x00000001146cc511 ProjectExplorer::Project::setActiveTarget(ProjectExplorer::Target*) + 193 (project.cpp:292) 12 libProjectExplorer_debug.dylib 0x00000001146aafde ProjectExplorer::SessionManager::setActiveTarget(ProjectExplorer::Project*, ProjectExplorer::Target*, ProjectExplorer::SetActive) + 78 (session.cpp:293) 13 libProjectExplorer_debug.dylib 0x00000001146cc5f5 ProjectExplorer::Project::removeTarget(ProjectExplorer::Target*) + 213 (project.cpp:257) 14 libProjectExplorer_debug.dylib 0x0000000114679b24 ProjectExplorer::Internal::TargetItem::addToContextMenu(QMenu*)::'lambda0'()::operator()() const + 1108 (targetsettingspanel.cpp:446) 15 libProjectExplorer_debug.dylib 0x00000001146796b9 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, ProjectExplorer::Internal::TargetItem::addToContextMenu(QMenu*)::'lambda0'()>::call(ProjectExplorer::Internal::TargetItem::addToContextMenu(QMenu*)::'lambda0'()&, void**) + 25 (qobjectdefs_impl.h:130) 16 libProjectExplorer_debug.dylib 0x0000000114679671 void QtPrivate::Functor<ProjectExplorer::Internal::TargetItem::addToContextMenu(QMenu*)::'lambda0'(), 0>::call<QtPrivate::List<>, void>(ProjectExplorer::Internal::TargetItem::addToContextMenu(QMenu*)::'lambda0'()&, void*, void**) + 33 (qobjectdefs_impl.h:241) 17 libProjectExplorer_debug.dylib 0x000000011467961d QtPrivate::QFunctorSlotObject<ProjectExplorer::Internal::TargetItem::addToContextMenu(QMenu*)::'lambda0'(), 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 157 (qobject_impl.h:169) 18 org.qt-project.QtCore 0x000000010d2f49fb QMetaObject::activate(QObject*, int, int, void**) + 731 19 org.qt-project.QtWidgets 0x000000010c605baf QAction::activate(QAction::ActionEvent) + 303 20 org.qt-project.QtWidgets 0x000000010c79e9b2 QMenuPrivate::activateCausedStack(QVector<QPointer<QWidget> > const&, QAction*, QAction::ActionEvent, bool) + 82 21 org.qt-project.QtWidgets 0x000000010c79bf8f QMenuPrivate::activateAction(QAction*, QAction::ActionEvent, bool) + 543 22 org.qt-project.QtWidgets 0x000000010c646d46 QWidget::event(QEvent*) + 1670 23 org.qt-project.QtWidgets 0x000000010c7a31a9 QMenu::event(QEvent*) + 1145 24 org.qt-project.QtWidgets 0x000000010c60ebad QApplicationPrivate::notify_helper(QObject*, QEvent*) + 269 25 org.qt-project.QtWidgets 0x000000010c612143 QApplication::notify(QObject*, QEvent*) + 9123 26 org.qt-project.QtCore 0x000000010d2c3a24 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 27 org.qt-project.QtWidgets 0x000000010c60f4d7 QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) + 871 28 org.qt-project.QtWidgets 0x000000010c667935 QWidgetWindow::handleMouseEvent(QMouseEvent*) + 2325 29 org.qt-project.QtWidgets 0x000000010c6665cf QWidgetWindow::event(QEvent*) + 175 30 org.qt-project.QtWidgets 0x000000010c60ebad QApplicationPrivate::notify_helper(QObject*, QEvent*) + 269 31 org.qt-project.QtWidgets 0x000000010c61147c QApplication::notify(QObject*, QEvent*) + 5852 32 org.qt-project.QtCore 0x000000010d2c3a24 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 33 org.qt-project.QtGui 0x000000010cbf3cd7 QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2855 34 org.qt-project.QtGui 0x000000010cbdaebb QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155 35 libqcocoa.dylib 0x000000010f549a61 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33 36 com.apple.CoreFoundation 0x00007fff9c0ea321 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 37 com.apple.CoreFoundation 0x00007fff9c0cb21d __CFRunLoopDoSources0 + 557 38 com.apple.CoreFoundation 0x00007fff9c0ca716 __CFRunLoopRun + 934 39 com.apple.CoreFoundation 0x00007fff9c0ca114 CFRunLoopRunSpecific + 420 40 com.apple.HIToolbox 0x00007fff9b62aebc RunCurrentEventLoopInMode + 240 41 com.apple.HIToolbox 0x00007fff9b62abf9 ReceiveNextEventCommon + 184 42 com.apple.HIToolbox 0x00007fff9b62ab26 _BlockUntilNextEventMatchingListInModeWithFilter + 71 43 com.apple.AppKit 0x00007fff99bc3a54 _DPSNextEvent + 1120 44 com.apple.AppKit 0x00007fff9a33f7ee -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 2796 45 com.apple.AppKit 0x00007fff99bb83db -[NSApplication run] + 926 46 libqcocoa.dylib 0x000000010f54891a QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2186 47 org.qt-project.QtCore 0x000000010d2bf661 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401 48 org.qt-project.QtWidgets 0x000000010c7a142b QMenu::exec(QPoint const&, QAction*) + 107 49 libProjectExplorer_debug.dylib 0x00000001145ba169 ProjectExplorer::Internal::ProjectWindowPrivate::openContextMenu(QPoint const&) + 953 (projectwindow.cpp:523) 50 libProjectExplorer_debug.dylib 0x00000001145bc1f9 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<QPoint const&>, void, void (ProjectExplorer::Internal::ProjectWindowPrivate::*)(QPoint const&)>::call(void (ProjectExplorer::Internal::ProjectWindowPrivate::*)(QPoint const&), ProjectExplorer::Internal::ProjectWindowPrivate*, void**) + 137 (qobjectdefs_impl.h:136) 51 libProjectExplorer_debug.dylib 0x00000001145bc143 void QtPrivate::FunctionPointer<void (ProjectExplorer::Internal::ProjectWindowPrivate::*)(QPoint const&)>::call<QtPrivate::List<QPoint const&>, void>(void (ProjectExplorer::Internal::ProjectWindowPrivate::*)(QPoint const&), ProjectExplorer::Internal::ProjectWindowPrivate*, void**) + 99 (qobjectdefs_impl.h:170) 52 libProjectExplorer_debug.dylib 0x00000001145bc056 QtPrivate::QSlotObject<void (ProjectExplorer::Internal::ProjectWindowPrivate::*)(QPoint const&), QtPrivate::List<QPoint const&>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 166 (qobject_impl.h:121) 53 org.qt-project.QtCore 0x000000010d2f49fb QMetaObject::activate(QObject*, int, int, void**) + 731 54 org.qt-project.QtWidgets 0x000000010c647a86 QWidget::event(QEvent*) + 5062 55 org.qt-project.QtWidgets 0x000000010c6fd05d QFrame::event(QEvent*) + 45 56 org.qt-project.QtWidgets 0x000000010c706cc3 QAbstractScrollArea::viewportEvent(QEvent*) + 179 57 org.qt-project.QtWidgets 0x000000010c87fc46 QAbstractItemView::viewportEvent(QEvent*) + 1526 58 org.qt-project.QtWidgets 0x000000010c8ef551 QTreeView::viewportEvent(QEvent*) + 513 59 org.qt-project.QtWidgets 0x000000010c707875 QAbstractScrollAreaFilter::eventFilter(QObject*, QEvent*) + 37 60 org.qt-project.QtCore 0x000000010d2c3cba QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) + 202 61 org.qt-project.QtWidgets 0x000000010c60eb98 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 248 62 org.qt-project.QtWidgets 0x000000010c610465 QApplication::notify(QObject*, QEvent*) + 1733 63 org.qt-project.QtCore 0x000000010d2c3a24 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 64 org.qt-project.QtWidgets 0x000000010c667ddf QWidgetWindow::handleMouseEvent(QMouseEvent*) + 3519 65 org.qt-project.QtWidgets 0x000000010c6665cf QWidgetWindow::event(QEvent*) + 175 66 org.qt-project.QtWidgets 0x000000010c60ebad QApplicationPrivate::notify_helper(QObject*, QEvent*) + 269 67 org.qt-project.QtWidgets 0x000000010c61147c QApplication::notify(QObject*, QEvent*) + 5852 68 org.qt-project.QtCore 0x000000010d2c3a24 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 164 69 org.qt-project.QtGui 0x000000010cbf3cd7 QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2855 70 org.qt-project.QtGui 0x000000010cbdaebb QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155 71 libqcocoa.dylib 0x000000010f549a61 QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 33 72 com.apple.CoreFoundation 0x00007fff9c0ea321 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 73 com.apple.CoreFoundation 0x00007fff9c0cb21d __CFRunLoopDoSources0 + 557 74 com.apple.CoreFoundation 0x00007fff9c0ca716 __CFRunLoopRun + 934 75 com.apple.CoreFoundation 0x00007fff9c0ca114 CFRunLoopRunSpecific + 420 76 com.apple.HIToolbox 0x00007fff9b62aebc RunCurrentEventLoopInMode + 240 77 com.apple.HIToolbox 0x00007fff9b62abf9 ReceiveNextEventCommon + 184 78 com.apple.HIToolbox 0x00007fff9b62ab26 _BlockUntilNextEventMatchingListInModeWithFilter + 71 79 com.apple.AppKit 0x00007fff99bc3a54 _DPSNextEvent + 1120 80 com.apple.AppKit 0x00007fff9a33f7ee -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 2796 81 com.apple.AppKit 0x00007fff99bb83db -[NSApplication run] + 926 82 libqcocoa.dylib 0x000000010f54891a QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2186 83 org.qt-project.QtCore 0x000000010d2bf661 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 401 84 org.qt-project.QtCore 0x000000010d2c40c9 QCoreApplication::exec() + 393 85 org.qt-project.qtcreator 0x000000010c02e8fd main + 12637 (main.cpp:535) 86 libdyld.dylib 0x00007fffb1852235 start + 1
For Gerrit Dashboard: QTCREATORBUG-19112 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
208666,2 | CMake: Fix crashes when last target is removed from a project | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |